fixed align for main menu

--- a/marble/style.css
+++ b/marble/style.css
@@ -62,7 +62,6 @@ h3 {
 .menu {
 	list-style-type: none;
 	float: right;
-	padding-top: 8px;
 	margin: 0px auto;
 }
 
@@ -70,7 +69,7 @@ h3 {
 	display: inline;
 	font-size: 20px;
 	margin-right: 10px;
-	vertical-align: top;
+	vertical-align: middle;
 }
 
 .menu li:last-child {
